--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
                 <input 
                 required maxlength="15"
                 type="text"
-                placeholder="What is your name?">
+                placeholder="What is your name?"
+                id="loginFormInput">
                 <input type="submit" value="Log In">
             </form>
             <h1 class ="hidden" id ="greeting"></h1>
